# nix-policy

./: .editorconfig  README.md  flake.nix  input.json  opa-wasm.nu  verify.rego
.github/workflows/: ci.yml
eval/: Cargo.toml  rust-toolchain.toml
eval/src/: main.rs
examples/: flake.rego  rbac.rego  tfstate.rego
nix/: evaluator.nix
nix/nu/: opa-wasm.nu
